@@ -1,22 +1,25 @@
 plugins {
-    id ("com.android.application")
-    id ("org.jetbrains.kotlin.android")
-    id ("com.google.gms.google-services")
-    id ("kotlin-parcelize")
-    id ("androidx.navigation.safeargs.kotlin")
-    id ("com.google.firebase.crashlytics")
-    id ("kotlin-kapt")
-    id ("com.google.firebase.firebase-perf")
+    id("com.android.application")
+    id("org.jetbrains.kotlin.android")
+    id("com.google.gms.google-services")
+    id("kotlin-parcelize")
+    id("androidx.navigation.safeargs.kotlin")
+    id("com.google.firebase.crashlytics")
+    id("kotlin-kapt")
+    id("com.google.firebase.firebase-perf")
+    id("com.google.dagger.hilt.android")
 }
+
+val ktlint by configurations.creating
 
 android {
     namespace = "com.binay.shaw.justap"
-    compileSdk = 33
+    compileSdk = 34
 
     defaultConfig {
         applicationId = "com.binay.shaw.justap"
         minSdk = 21
-        targetSdk = 33
+        targetSdk = 34
         versionCode = 7
         versionName = "2.1.2"
         vectorDrawables.useSupportLibrary = true
@@ -25,16 +28,25 @@ android {
 
     buildFeatures {
         viewBinding = true
+        compose = true
+        buildConfig = true
     }
 
     buildTypes {
         getByName("release") {
             isMinifyEnabled = false
-            proguardFiles ( getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro" )
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
         }
         getByName("debug") {
             isDebuggable = true
         }
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.6"
     }
 
     lint {
@@ -50,52 +62,136 @@ android {
     }
 }
 
+val ktlintCheck by tasks.registering(JavaExec::class) {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args(
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+}
+
+//tasks.check {
+//    dependsOn(ktlintCheck)
+// run -> ./gradlew ktlintCheck
+//}
+
+tasks.register<JavaExec>("ktlintFormat") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args(
+        "-F",
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+    // run -> ./gradlew ktlintFormat
+}
+
 dependencies {
 
-    val lifecycleVersion = "2.6.1"
-    val cameraX = "1.3.0-alpha05"
-    val navVersion = "2.5.3"
-    val roomVersion = "2.5.1"
-    val lottieVersion = "5.2.0"
+    val lifecycleVersion = "2.8.0"
+    val navVersion = "2.7.7"
+    val roomVersion = "2.6.1"
+    val lottieVersion = "6.1.0"
+    val cameraX = "1.4.0-beta01"
+
+    // Compose
+    val composeBom = platform("androidx.compose:compose-bom:2024.05.00")
+    implementation(composeBom)
+    implementation("androidx.compose.runtime:runtime")
+    implementation("androidx.compose.ui:ui")
+    implementation("androidx.compose.foundation:foundation")
+    implementation("androidx.compose.foundation:foundation-layout")
+    implementation("androidx.compose.material:material")
+    implementation("androidx.compose.material3:material3:1.2.1")
+    implementation("androidx.compose.runtime:runtime-livedata")
+    implementation("androidx.compose.ui:ui-tooling")
+    implementation("androidx.compose.ui:ui-graphics")
+    implementation("androidx.compose.ui:ui-tooling-preview")
+    implementation("androidx.constraintlayout:constraintlayout-compose:1.0.1")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycleVersion")
+    implementation("androidx.activity:activity-compose:1.9.0")
+    implementation("androidx.navigation:navigation-compose:2.7.7")
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:$lifecycleVersion")
+    implementation("androidx.compose.material:material-icons-extended:1.6.7")
+
+
+    // Compose Test
+    androidTestImplementation(composeBom)
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4")
+    debugImplementation("androidx.compose.ui:ui-test-manifest")
+
+    lintChecks("com.slack.lint.compose:compose-lint-checks:1.3.1")
+    ktlint("com.pinterest.ktlint:ktlint-cli:1.2.1") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
+    // ktlint(project(":custom-ktlint-ruleset")) // in case of custom ruleset
+
+    //DataStore (SharedPrefs)
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+
+    // Dependency Injection
+    implementation("com.google.dagger:hilt-android:2.49")
+    kapt("com.google.dagger:hilt-android-compiler:2.48")
+    implementation("androidx.hilt:hilt-work:1.2.0")
+    kapt("androidx.hilt:hilt-compiler:1.2.0")
+    implementation("androidx.work:work-runtime-ktx:2.9.0")
+    implementation("androidx.hilt:hilt-navigation-compose:1.2.0")
+
+    // Lifecycle
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycleVersion")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion")
+
+    // Not a processor, but forces Dagger to use newer metadata lib
+//    kapt ("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0")
 
     //Default Pre-defined
-    implementation ("androidx.core:core-ktx:1.9.0")
-    implementation ("androidx.appcompat:appcompat:1.6.1")
-    implementation ("com.google.android.material:material:1.8.0")
-    implementation ("androidx.constraintlayout:constraintlayout:2.1.4")
+    implementation("androidx.core:core-ktx:1.12.0")
+    implementation("androidx.appcompat:appcompat:1.6.1")
+    implementation("com.google.android.material:material:1.11.0")
+    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
 
     //Test
-    testImplementation ("junit:junit:4.13.2")
-    androidTestImplementation ("androidx.test.ext:junit:1.1.5")
-    androidTestImplementation ("androidx.test.espresso:espresso-core:3.5.1")
-    testImplementation ("com.google.truth:truth:1.1.3")
-    androidTestImplementation ("androidx.test:runner:1.5.2")
-    androidTestImplementation ("androidx.test:rules:1.5.0")
+    testImplementation("junit:junit:4.13.2")
+    androidTestImplementation("androidx.test.ext:junit:1.1.5")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
+    testImplementation("com.google.truth:truth:1.1.3")
+    androidTestImplementation("androidx.test:runner:1.5.2")
+    androidTestImplementation("androidx.test:rules:1.5.0")
 
 
     //Navigation
-    implementation ("androidx.navigation:navigation-fragment-ktx:$navVersion")
-    implementation ("androidx.navigation:navigation-ui-ktx:$navVersion")
+    implementation("androidx.navigation:navigation-fragment-ktx:$navVersion")
+    implementation("androidx.navigation:navigation-ui-ktx:$navVersion")
 
     //LottieFiles Animation
-    implementation ("com.airbnb.android:lottie:$lottieVersion")
+    implementation("com.airbnb.android:lottie:$lottieVersion")
 
-    //ViewModel
-    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion")
-
-    // LiveData
-    implementation ("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion")
 
     //Firebase
-    implementation (platform("com.google.firebase:firebase-bom:31.1.1"))
-    implementation ("com.google.firebase:firebase-auth-ktx:21.2.0")
-    implementation ("com.google.firebase:firebase-database-ktx:20.1.0")
-    implementation ("com.google.firebase:firebase-storage-ktx:20.1.0")
-    implementation ("com.google.android.gms:play-services-auth:20.4.1")
-    implementation ("com.google.firebase:firebase-crashlytics-ktx")
-    implementation ("com.google.firebase:firebase-analytics-ktx")
-    implementation ("com.google.firebase:firebase-perf-ktx")
-    implementation ("com.google.firebase:firebase-messaging-ktx:23.2.1")
+    implementation(platform("com.google.firebase:firebase-bom:31.1.1"))
+    implementation("com.google.firebase:firebase-auth-ktx:22.3.1")
+    implementation("com.google.firebase:firebase-database-ktx:20.3.0")
+    implementation("com.google.firebase:firebase-storage-ktx:20.3.0")
+    implementation("com.google.android.gms:play-services-auth:21.0.0")
+    implementation("com.google.firebase:firebase-crashlytics-ktx")
+    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation("com.google.firebase:firebase-perf-ktx")
+    implementation("com.google.firebase:firebase-messaging-ktx:23.4.1")
+
+    implementation("org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.7")
 
 
     //Room Database
@@ -105,38 +201,51 @@ dependencies {
     implementation("androidx.room:room-ktx:$roomVersion")
 
     //Coroutines
-    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4")
-    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
-    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
 
     //QR Code generator
-    implementation ("com.google.zxing:core:3.5.1")
+    implementation("com.google.zxing:core:3.5.1")
 
     //ML Kit
-    implementation ("com.google.mlkit:barcode-scanning:17.1.0")
+    implementation("com.google.mlkit:barcode-scanning:17.2.0")
 
     //CameraX
-    implementation ("androidx.camera:camera-camera2:$cameraX")
-    implementation ("androidx.camera:camera-lifecycle:$cameraX")
-    implementation ("androidx.camera:camera-view:$cameraX")
+    implementation("androidx.camera:camera-camera2:$cameraX")
+    implementation("androidx.camera:camera-lifecycle:$cameraX")
+    implementation("androidx.camera:camera-view:$cameraX")
+    implementation("androidx.camera:camera-core:$cameraX")
 
     //ImagePicker
-    implementation ("com.github.dhaval2404:imagepicker:2.1")
-    implementation ("androidx.legacy:legacy-support-v4:1.0.0")
+    implementation("com.github.dhaval2404:imagepicker:2.1")
+    implementation("androidx.legacy:legacy-support-v4:1.0.0")
 
     //Glide
-    implementation ("com.github.bumptech.glide:glide:4.14.2")
-    annotationProcessor ("com.github.bumptech.glide:compiler:4.14.2")
+    implementation("com.github.bumptech.glide:glide:4.14.2")
+    annotationProcessor("com.github.bumptech.glide:compiler:4.14.2")
 
     //Circular ImageView
-    implementation ("de.hdodenhof:circleimageview:3.1.0")
+    implementation("de.hdodenhof:circleimageview:3.1.0")
+
+    // Coil - Image Loading
+    implementation("io.coil-kt:coil-compose:2.4.0")
 
     //Custom AlertBar (Top)
-    implementation ("com.github.tapadoo:alerter:7.2.4")
+    implementation("com.github.tapadoo:alerter:7.2.4")
 
     //ColorPicker
-    implementation ("com.github.skydoves:colorpickerpreference:2.0.6")
+    implementation("com.github.skydoves:colorpickerpreference:2.0.6")
 
     // In-app update
-    implementation ("com.google.android.play:core:1.10.3")
+    implementation("com.google.android.play:core:1.10.3")
+
+    // Timber
+    implementation("com.jakewharton.timber:timber:5.0.1")
+
+    // Capturable
+    implementation("dev.shreyaspatil:capturable:2.1.0")
+
+    // Rebugger
+    implementation("io.github.theapache64:rebugger:1.0.0-rc03")
 }
